# sir-quadtree

./: .gitignore  LICENSE  meson.build  requirements.txt  visualize.py
src/: agent.h  csv_exporter.h  main.cpp  quadtree.cpp  quadtree.h  region_subsystem.h  simulation.cpp  simulation.h  sir_state.h  vec2.h
